force-app/main/default/objects/GoogleDriveFolder__c/GoogleDriveFolder__c.object-meta.xml
<CustomObject>
    <label>GoogleDriveFolder</label>
    <nameField>
        <label>GoogleDriveFolder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GoogleDriveFolders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>