force-app/main/default/objects/GoogleDriveFolder__c/fields/GoogleDrive_ID__c.field-meta.xml
<CustomField>
    <fullName>GoogleDrive_ID__c</fullName>
    <externalId>true</externalId>
    <label>GoogleDrive_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>