force-app/main/default/objects/GoogleDriveFolder__c/fields/GoogleDriveFolder__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GoogleDriveParentFolder</label>
    <referenceTo>GoogleDriveFolder__c</referenceTo>
    <relationshipLabel>GoogleDriveFolders</relationshipLabel>
    <relationshipName>GoogleDriveFolders</relationshipName>
    <type>Lookup</type>
</CustomField>