force-app/main/default/objects/GoogleDriveFolder__c/fields/GoogleDriveSubFolder__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveSubFolder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is filled when two Parent folders needed</inlineHelpText>
    <label>GoogleDriveSubFolder</label>
    <referenceTo>GoogleDriveFolder__c</referenceTo>
    <relationshipLabel>GoogleDriveFolders (GoogleDriveSubFolder)</relationshipLabel>
    <relationshipName>GoogleDriveFolders1</relationshipName>
    <type>Lookup</type>
</CustomField>