force-app/main/default/objects/GoogleDriveFolder__c/fields/Synchronous__c.field-meta.xml
<CustomField>
    <fullName>Synchronous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synchronous</label>
    <type>Checkbox</type>
</CustomField>