force-app/main/default/objects/GoogleDriveFolder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>GoogleDrive_ID__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>